create folder genereted, add basic+normalize

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,12 +3,12 @@
     {
       "format": "expanded",
       "extensionName": ".css",
-      "savePath": "/css"
+      "savePath": "/css/generated/expanded"
     },
     {
       "format": "compressed",
       "extensionName": ".min.css",
-      "savePath": "/css"
+      "savePath": "/css/generated/compressed"
     }
   ],
   "liveSassCompile.settings.excludeList": [
